feat: add model sideshots

--- a/patterns/drive-homepage/index.html
+++ b/patterns/drive-homepage/index.html
@@ -95,20 +95,52 @@
     <section class="model-chooser" aria-label="Wählen Sie Ihr Porsche Modell">
       <p-carousel width="extended" slides-per-page="2" focus-on-center-slide="true" trim-space="false" gradient-color="background-base" align-header="center" heading="Welcher darf es heute sein?" description="Unsere Porsche Standorte bieten Ihnen eine vielfältige Modellauswahl und erfüllen gerne Ihre individuellen Wünsche.">
         <div class="model-chooser__sideshot">
-          <p-model-signature model="911" safe-zone="true" size="inherit" color="contrast-low"></p-model-signature>
-          <img src="https://images-porsche.imgix.net/-/media/646ED7CDD4DF4060A4823F3A9DB8DA22_97CB2E119D8749C19004EC939CD09E96_CZ25W01IX0010911-carrera-side?w=2560&amp;h=697&amp;q=45&amp;crop=faces%2Centropy%2Cedges&amp;auto=format" width="2560" height="697" srcset="https://images-porsche.imgix.net/-/media/646ED7CDD4DF4060A4823F3A9DB8DA22_97CB2E119D8749C19004EC939CD09E96_CZ25W01IX0010911-carrera-side?w=600&amp;q=45&amp;crop=faces%2Centropy%2Cedges&amp;auto=format 600w,https://images-porsche.imgix.net/-/media/646ED7CDD4DF4060A4823F3A9DB8DA22_97CB2E119D8749C19004EC939CD09E96_CZ25W01IX0010911-carrera-side?w=1200&amp;q=45&amp;crop=faces%2Centropy%2Cedges&amp;auto=format 1200w,https://images-porsche.imgix.net/-/media/646ED7CDD4DF4060A4823F3A9DB8DA22_97CB2E119D8749C19004EC939CD09E96_CZ25W01IX0010911-carrera-side?w=1800&amp;q=45&amp;crop=faces%2Centropy%2Cedges&amp;auto=format 1800w,https://images-porsche.imgix.net/-/media/646ED7CDD4DF4060A4823F3A9DB8DA22_97CB2E119D8749C19004EC939CD09E96_CZ25W01IX0010911-carrera-side?w=2400&amp;q=45&amp;crop=faces%2Centropy%2Cedges&amp;auto=format 2400w,https://images-porsche.imgix.net/-/media/646ED7CDD4DF4060A4823F3A9DB8DA22_97CB2E119D8749C19004EC939CD09E96_CZ25W01IX0010911-carrera-side?w=2800&amp;q=45&amp;crop=faces%2Centropy%2Cedges&amp;auto=format 2800w" sizes="(min-width: 1920px) 1311px,(min-width: 760px) 70vw,85vw" alt="Porsche 911 Carrera in Luganoblau im Profil / Seitenansicht." loading="eager" fetchpriority="high" style="aspect-ratio: 2560 / 697;">
+          <div>
+            <p-model-signature model="911" safe-zone="true" size="inherit" color="contrast-low"></p-model-signature>
+            <img src="/assets/911_coupe.webp" alt="Porsche 911 Coupe / Seitenansicht.">
+          </div>
         </div>
         <div class="model-chooser__sideshot">
-          <p-model-signature model="718" safe-zone="true" size="inherit" color="contrast-low"></p-model-signature>
-          <img src="https://images-porsche.imgix.net/-/media/646ED7CDD4DF4060A4823F3A9DB8DA22_97CB2E119D8749C19004EC939CD09E96_CZ25W01IX0010911-carrera-side?w=2560&amp;h=697&amp;q=45&amp;crop=faces%2Centropy%2Cedges&amp;auto=format" width="2560" height="697" srcset="https://images-porsche.imgix.net/-/media/646ED7CDD4DF4060A4823F3A9DB8DA22_97CB2E119D8749C19004EC939CD09E96_CZ25W01IX0010911-carrera-side?w=600&amp;q=45&amp;crop=faces%2Centropy%2Cedges&amp;auto=format 600w,https://images-porsche.imgix.net/-/media/646ED7CDD4DF4060A4823F3A9DB8DA22_97CB2E119D8749C19004EC939CD09E96_CZ25W01IX0010911-carrera-side?w=1200&amp;q=45&amp;crop=faces%2Centropy%2Cedges&amp;auto=format 1200w,https://images-porsche.imgix.net/-/media/646ED7CDD4DF4060A4823F3A9DB8DA22_97CB2E119D8749C19004EC939CD09E96_CZ25W01IX0010911-carrera-side?w=1800&amp;q=45&amp;crop=faces%2Centropy%2Cedges&amp;auto=format 1800w,https://images-porsche.imgix.net/-/media/646ED7CDD4DF4060A4823F3A9DB8DA22_97CB2E119D8749C19004EC939CD09E96_CZ25W01IX0010911-carrera-side?w=2400&amp;q=45&amp;crop=faces%2Centropy%2Cedges&amp;auto=format 2400w,https://images-porsche.imgix.net/-/media/646ED7CDD4DF4060A4823F3A9DB8DA22_97CB2E119D8749C19004EC939CD09E96_CZ25W01IX0010911-carrera-side?w=2800&amp;q=45&amp;crop=faces%2Centropy%2Cedges&amp;auto=format 2800w" sizes="(min-width: 1920px) 1311px,(min-width: 760px) 70vw,85vw" alt="Porsche 911 Carrera in Luganoblau im Profil / Seitenansicht." loading="eager" fetchpriority="high" style="aspect-ratio: 2560 / 697;">
+          <div>
+            <p-model-signature model="911" safe-zone="true" size="inherit" color="contrast-low"></p-model-signature>
+            <img src="/assets/911_cabrio.webp" alt="Porsche 911 Cabrio / Seitenansicht.">
+          </div>
         </div>
         <div class="model-chooser__sideshot">
-          <p-model-signature model="taycan" safe-zone="true" size="inherit" color="contrast-low"></p-model-signature>
-          <img src="https://images-porsche.imgix.net/-/media/646ED7CDD4DF4060A4823F3A9DB8DA22_97CB2E119D8749C19004EC939CD09E96_CZ25W01IX0010911-carrera-side?w=2560&amp;h=697&amp;q=45&amp;crop=faces%2Centropy%2Cedges&amp;auto=format" width="2560" height="697" srcset="https://images-porsche.imgix.net/-/media/646ED7CDD4DF4060A4823F3A9DB8DA22_97CB2E119D8749C19004EC939CD09E96_CZ25W01IX0010911-carrera-side?w=600&amp;q=45&amp;crop=faces%2Centropy%2Cedges&amp;auto=format 600w,https://images-porsche.imgix.net/-/media/646ED7CDD4DF4060A4823F3A9DB8DA22_97CB2E119D8749C19004EC939CD09E96_CZ25W01IX0010911-carrera-side?w=1200&amp;q=45&amp;crop=faces%2Centropy%2Cedges&amp;auto=format 1200w,https://images-porsche.imgix.net/-/media/646ED7CDD4DF4060A4823F3A9DB8DA22_97CB2E119D8749C19004EC939CD09E96_CZ25W01IX0010911-carrera-side?w=1800&amp;q=45&amp;crop=faces%2Centropy%2Cedges&amp;auto=format 1800w,https://images-porsche.imgix.net/-/media/646ED7CDD4DF4060A4823F3A9DB8DA22_97CB2E119D8749C19004EC939CD09E96_CZ25W01IX0010911-carrera-side?w=2400&amp;q=45&amp;crop=faces%2Centropy%2Cedges&amp;auto=format 2400w,https://images-porsche.imgix.net/-/media/646ED7CDD4DF4060A4823F3A9DB8DA22_97CB2E119D8749C19004EC939CD09E96_CZ25W01IX0010911-carrera-side?w=2800&amp;q=45&amp;crop=faces%2Centropy%2Cedges&amp;auto=format 2800w" sizes="(min-width: 1920px) 1311px,(min-width: 760px) 70vw,85vw" alt="Porsche 911 Carrera in Luganoblau im Profil / Seitenansicht." loading="eager" fetchpriority="high" style="aspect-ratio: 2560 / 697;">
+          <div>
+            <p-model-signature model="718" safe-zone="true" size="inherit" color="contrast-low"></p-model-signature>
+            <img src="/assets/718_boxster.webp" alt="Porsche 718 Boxter / Seitenansicht.">
+          </div>
         </div>
         <div class="model-chooser__sideshot">
-          <p-model-signature model="panamera" safe-zone="true" size="inherit" color="contrast-low"></p-model-signature>
-          <img src="https://images-porsche.imgix.net/-/media/646ED7CDD4DF4060A4823F3A9DB8DA22_97CB2E119D8749C19004EC939CD09E96_CZ25W01IX0010911-carrera-side?w=2560&amp;h=697&amp;q=45&amp;crop=faces%2Centropy%2Cedges&amp;auto=format" width="2560" height="697" srcset="https://images-porsche.imgix.net/-/media/646ED7CDD4DF4060A4823F3A9DB8DA22_97CB2E119D8749C19004EC939CD09E96_CZ25W01IX0010911-carrera-side?w=600&amp;q=45&amp;crop=faces%2Centropy%2Cedges&amp;auto=format 600w,https://images-porsche.imgix.net/-/media/646ED7CDD4DF4060A4823F3A9DB8DA22_97CB2E119D8749C19004EC939CD09E96_CZ25W01IX0010911-carrera-side?w=1200&amp;q=45&amp;crop=faces%2Centropy%2Cedges&amp;auto=format 1200w,https://images-porsche.imgix.net/-/media/646ED7CDD4DF4060A4823F3A9DB8DA22_97CB2E119D8749C19004EC939CD09E96_CZ25W01IX0010911-carrera-side?w=1800&amp;q=45&amp;crop=faces%2Centropy%2Cedges&amp;auto=format 1800w,https://images-porsche.imgix.net/-/media/646ED7CDD4DF4060A4823F3A9DB8DA22_97CB2E119D8749C19004EC939CD09E96_CZ25W01IX0010911-carrera-side?w=2400&amp;q=45&amp;crop=faces%2Centropy%2Cedges&amp;auto=format 2400w,https://images-porsche.imgix.net/-/media/646ED7CDD4DF4060A4823F3A9DB8DA22_97CB2E119D8749C19004EC939CD09E96_CZ25W01IX0010911-carrera-side?w=2800&amp;q=45&amp;crop=faces%2Centropy%2Cedges&amp;auto=format 2800w" sizes="(min-width: 1920px) 1311px,(min-width: 760px) 70vw,85vw" alt="Porsche 911 Carrera in Luganoblau im Profil / Seitenansicht." loading="eager" fetchpriority="high" style="aspect-ratio: 2560 / 697;">
+          <div>
+            <p-model-signature model="911" safe-zone="true" size="inherit" color="contrast-low"></p-model-signature>
+            <img src="/assets/911_targa.webp" alt="Porsche 911 Targa / Seitenansicht.">
+          </div>
+        </div>
+        <div class="model-chooser__sideshot">
+          <div>
+            <p-model-signature model="911" safe-zone="true" size="inherit" color="contrast-low"></p-model-signature>
+            <img src="/assets/911_gt3.webp" alt="Porsche 911 GT3 / Seitenansicht.">
+          </div>
+        </div>
+        <div class="model-chooser__sideshot">
+          <div>
+            <p-model-signature model="macan" safe-zone="true" size="inherit" color="contrast-low"></p-model-signature>
+            <img src="/assets/macan.webp" alt="Porsche Macan / Seitenansicht.">
+          </div>
+        </div>
+        <div class="model-chooser__sideshot">
+          <div>
+            <p-model-signature model="taycan" safe-zone="false" size="inherit" color="contrast-low"></p-model-signature>
+            <img src="/assets/taycan.webp" alt="Porsche Taycan / Seitenansicht.">
+          </div>
+        </div>
+        <div class="model-chooser__sideshot">
+          <div>
+            <p-model-signature model="cayenne" safe-zone="true" size="inherit" color="contrast-low"></p-model-signature>
+            <img src="/assets/cayenne.webp" alt="Porsche Cayenne / Seitenansicht.">
+          </div>
         </div>
       </p-carousel>
     </section>
