fix: adjust reserve dropdown

--- a/patterns/drive-homepage/index.html
+++ b/patterns/drive-homepage/index.html
@@ -36,7 +36,7 @@
       </div>
     </section>
 
-    <section class="reserve" aria-labelledby="reserve">
+    <section class="form" aria-labelledby="reserve">
       <div class="reserve mobile">
         <div class="reserve__container">
           <div class="reserve__heading">
