feat: add animation & fix assets

--- a/patterns/drive-homepage/index.html
+++ b/patterns/drive-homepage/index.html
@@ -14,7 +14,7 @@
   <main>
     <section class="hero" aria-labelledby="hero-heading">
       <div class="hero__media">
-          <img src="assets/hero.webp" alt="Porsche Taycan seen from above"/>
+          <img src="../../public/assets/hero.webp" alt="Porsche Taycan seen from above"/>
       </div>
       <div class="hero__header">
         <p-display theme="dark" align="center" size="small" tag="h1" id="hero-heading">Ungebunden Porsche fahren auf Abruf.</p-display>
@@ -127,7 +127,7 @@
           </div>
         </div>
         <div class="dropdown__img">
-          <img src="assets/partner-teaser.webp" alt="Some alternative text for screen readers describing the image">
+          <img src="../../public/assets/partner-teaser.webp" alt="Some alternative text for screen readers describing the image">
           <p-text theme="dark" size="large">Driven by Dreams Stuttgart</p-text>
           <p-text theme="dark">
             Dorotheen Quartier Marktstraße 1-3<br />
@@ -199,7 +199,7 @@
 
     <section class="partner -p-mt-xxl-fluid" aria-label="Porsche & Europcar am Flughafen">
       <p-link-tile href="https://porsche.com" weight="regular" aspect-ratio="{ base: '3/4', xs: '4/3', s: '16/9' }" label="Mehr erfahren" description="Porsche und Europcar bieten Ihnen maximale Flexibilität am Airport – mit dem unverwechselbaren Porsche Flair.">
-        <img src="assets/eurocar.webp" alt="Porsche 911 from the side driving on the street">
+        <img src="../../public/assets/eurocar.webp" alt="Porsche 911 from the side driving on the street">
       </p-link-tile>
     </section>
 
@@ -207,7 +207,7 @@
       <p-heading size="large" tag="h2" id="benefits">Warum Porsche Drive?</p-heading>
       <div class="benefits__item">
         <div class="mood">
-          <img srcset="assets/partner-teaser@2x.webp 2x" src="assets/partner-teaser.webp" width="1308" height="736" alt="Some alternative text for screen readers describing the image">
+          <img srcset="assets/partner-teaser@2x.webp 2x" src="../../public/assets/partner-teaser.webp" width="1308" height="736" alt="Some alternative text for screen readers describing the image">
         </div>
         <div class="text">
           <p-heading size="large">Experience</p-heading>
@@ -216,7 +216,7 @@
       </div>
       <div class="benefits__item">
         <div class="mood">
-          <img srcset="assets/partner-teaser@2x.webp 2x" src="assets/partner-teaser.webp" width="1308" height="736" alt="Some alternative text for screen readers describing the image">
+          <img srcset="assets/partner-teaser@2x.webp 2x" src="../../public/assets/partner-teaser.webp" width="1308" height="736" alt="Some alternative text for screen readers describing the image">
         </div>
         <div class="text">
           <p-heading size="large">Models</p-heading>
@@ -225,7 +225,7 @@
       </div>
       <div class="benefits__item">
         <div class="mood">
-          <img srcset="assets/partner-teaser@2x.webp 2x" src="assets/partner-teaser.webp" width="1308" height="736" alt="Some alternative text for screen readers describing the image">
+          <img srcset="assets/partner-teaser@2x.webp 2x" src="../../public/assets/partner-teaser.webp" width="1308" height="736" alt="Some alternative text for screen readers describing the image">
         </div>
         <div class="text">
           <p-heading size="large">Benefits</p-heading>
@@ -234,7 +234,7 @@
       </div>
       <div class="benefits__item">
         <div class="mood">
-          <img srcset="assets/partner-teaser@2x.webp 2x" src="assets/partner-teaser.webp" width="1308" height="736" alt="Some alternative text for screen readers describing the image">
+          <img srcset="assets/partner-teaser@2x.webp 2x" src="../../public/assets/partner-teaser.webp" width="1308" height="736" alt="Some alternative text for screen readers describing the image">
         </div>
         <div class="text">
           <p-heading size="large">Service</p-heading>
@@ -267,7 +267,7 @@
 
     <section class="voucher -p-mt-xxl-fluid" aria-label="Gutschein kaufen">
       <p-link-tile href="https://porsche.com" weight="regular" aspect-ratio="{ base: '3/4', xs: '3/4', s: '16/9' }" label="Gutschein kaufen" description="Das schönste Geschenk? Fahrfreude. Verschenken Sie einen Gutschein und machen Sie den Traum vom Porsche fahren wahr.">
-        <img src="assets/voucher.webp" alt="Two people opening an envelope with a voucher inside">
+        <img src="../../public/assets/voucher.webp" alt="Two people opening an envelope with a voucher inside">
       </p-link-tile>
     </section>
 
