feat: add model signature animation

--- a/patterns/drive-homepage/index.html
+++ b/patterns/drive-homepage/index.html
@@ -148,7 +148,7 @@
       <p-carousel width="extended" slides-per-page="{ base: 1, s: 2 }" focus-on-center-slide="true" trim-space="false" gradient-color="background-base" align-header="center" heading="Welcher darf es heute sein?" description="Unsere Porsche Standorte bieten Ihnen eine vielfältige Modellauswahl und erfüllen gerne Ihre individuellen Wünsche.">
         <div class="model-chooser__sideshot">
           <div>
-            <p-model-signature model="911" safe-zone="true" size="inherit" color="contrast-low"></p-model-signature>
+            <p-model-signature class="show" model="911" safe-zone="true" size="inherit" color="contrast-low"></p-model-signature>
             <img src="/assets/911_coupe.webp" alt="Porsche 911 Coupe / Seitenansicht.">
           </div>
         </div>
