feat: fix station hover image

--- a/patterns/drive-homepage/index.html
+++ b/patterns/drive-homepage/index.html
@@ -113,17 +113,17 @@
         <div class="dropdown__results">
           <div class="scroll-container">
             <p-text size="x-small">Suchergebnisse</p-text>
-            <p-button-pure icon="pin" size="medium" data-img="assets/hero.webp" data-address="Dorotheen Quartier Marktstraße 1-3<br />70173 Stuttgart<br />Germany">Driven by Dreams Stuttgart</p-button-pure>
-            <p-button-pure icon="pin" size="medium" data-img="assets/hero.webp" data-address="Porscheplatz 1<br />70435 Stuttgart<br />Germany">Porsche Museum Stuttgart</p-button-pure>
+            <p-button-pure icon="pin" size="medium" data-img="/templates/assets/hero.webp" data-address="Dorotheen Quartier Marktstraße 1-3<br />70173 Stuttgart<br />Germany">Driven by Dreams Stuttgart</p-button-pure>
+            <p-button-pure icon="pin" size="medium" data-img="/templates/assets/hero.webp" data-address="Porscheplatz 1<br />70435 Stuttgart<br />Germany">Porsche Museum Stuttgart</p-button-pure>
             <p-text size="x-small">Beliebte Stationen</p-text>
-            <p-button-pure icon="pin" size="medium" data-img="assets/hero.webp" data-address="Lübecker Str. 2<br />22087 Hamburg<br />Germany">Porsche Zentrum Hamburg</p-button-pure>
-            <p-button-pure icon="pin" size="medium" data-img="assets/hero.webp" data-address="Blumenhaller Weg 153<br />49078 Osnabrück<br />Germany">Porsche Zentrum Osnabrück</p-button-pure>
-            <p-button-pure icon="pin" size="medium" data-img="assets/hero.webp" data-address="Poststraße 7<br >04158 Leipzig<br />Germany">Porsche Zentrum Leipzig</p-button-pure>
-            <p-button-pure icon="pin" size="medium" data-img="assets/hero.webp" data-address="Lübecker Str. 2<br />22087 Hamburg<br />Germany">Porsche Zentrum Hamburg</p-button-pure>
-            <p-button-pure icon="pin" size="medium" data-img="assets/hero.webp" data-address="Lübecker Str. 2<br />22087 Hamburg<br />Germany">Porsche Zentrum Hamburg</p-button-pure>
-            <p-button-pure icon="pin" size="medium" data-img="assets/hero.webp" data-address="Blumenhaller Weg 153<br />49078 Osnabrück<br />Germany">Porsche Zentrum Osnabrück</p-button-pure>
-            <p-button-pure icon="pin" size="medium" data-img="assets/hero.webp" data-address="Poststraße 7<br >04158 Leipzig<br />Germany">Porsche Zentrum Leipzig</p-button-pure>
-            <p-button-pure icon="pin" size="medium" data-img="assets/hero.webp" data-address="Lübecker Str. 2<br />22087 Hamburg<br />Germany">Porsche Zentrum Hamburg</p-button-pure>
+            <p-button-pure icon="pin" size="medium" data-img="/templates/assets/hero.webp" data-address="Lübecker Str. 2<br />22087 Hamburg<br />Germany">Porsche Zentrum Hamburg</p-button-pure>
+            <p-button-pure icon="pin" size="medium" data-img="/templates/assets/hero.webp" data-address="Blumenhaller Weg 153<br />49078 Osnabrück<br />Germany">Porsche Zentrum Osnabrück</p-button-pure>
+            <p-button-pure icon="pin" size="medium" data-img="/templates/assets/hero.webp" data-address="Poststraße 7<br >04158 Leipzig<br />Germany">Porsche Zentrum Leipzig</p-button-pure>
+            <p-button-pure icon="pin" size="medium" data-img="/templates/assets/hero.webp" data-address="Lübecker Str. 2<br />22087 Hamburg<br />Germany">Porsche Zentrum Hamburg</p-button-pure>
+            <p-button-pure icon="pin" size="medium" data-img="/templates/assets/hero.webp" data-address="Lübecker Str. 2<br />22087 Hamburg<br />Germany">Porsche Zentrum Hamburg</p-button-pure>
+            <p-button-pure icon="pin" size="medium" data-img="/templates/assets/hero.webp" data-address="Blumenhaller Weg 153<br />49078 Osnabrück<br />Germany">Porsche Zentrum Osnabrück</p-button-pure>
+            <p-button-pure icon="pin" size="medium" data-img="/templates/assets/hero.webp" data-address="Poststraße 7<br >04158 Leipzig<br />Germany">Porsche Zentrum Leipzig</p-button-pure>
+            <p-button-pure icon="pin" size="medium" data-img="/templates/assets/hero.webp" data-address="Lübecker Str. 2<br />22087 Hamburg<br />Germany">Porsche Zentrum Hamburg</p-button-pure>
           </div>
         </div>
         <div class="dropdown__img">
